--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
   <title>Onrails</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-</head>
-<body>
+</head><head>
 
-<%= yield %>
+<body>
+	
+	<%= render 'layouts/header' %>
+
+	<div class="container">
+		<%= yield %>
+		<%= render 'layouts/footer' %>
+	</div>
 
 </body>
 </html>
